# el2go-agent

./: .gitignore  Android.bp  CMakeLists.txt  Kconfig  README.md  SBOM.spdx.json  SCR.txt  el2go_agent-config.cmake.in  mcux.cmake  version_info.txt
doc/: NOTES.txt  edgelock2go_agent_apis.rst  introduction.rst  readme.rst  readme_usage_examples.rst
doc/protobuf/: Agent.options  Agent.proto  Apdu.proto  Datastore.proto  Dispatcher.options  Dispatcher.proto  Hostcmd.proto  PSA.options  PSA.proto  Proxy.proto  RPC.proto  (+4 more)
ex/: CMakeLists.txt
ex/src/: CMakeLists.txt  iot_agent_demo.c  openssl_conf_v102.cnf  openssl_conf_v111.cnf
ex/src/apps/: apdu_player_stdin.c  apdu_player_stdin_card_manager.c  claimcode_inject_demo.c  el2go_claimcode_encryption.c  el2go_mqtt_client.c  iot_agent_e2e.c  iot_agent_fill_datastore.c  object_dump.c  remote_provisioning_client.c  remote_runner_server.c
ex/src/apps/psa_examples/: mbedtls_psa_el2go_test.c  nxp_iot_agent_psa_init_keystore.c  nxp_iot_css_keys_derivation.c  psa_tls_client_example.c  psa_usage_example.c
ex/src/apps/psa_examples/el2go_blob_test/: CMakeLists.txt  el2go_blob_test.c  el2go_blob_test.h  el2go_blob_test.readme  el2go_blob_test_external.c  el2go_blob_test_external.h  el2go_blob_test_internal.c  el2go_blob_test_internal.h  el2go_blob_test_psa.c  el2go_blob_test_psa.h
ex/src/apps/psa_examples/el2go_csr/: el2go_csr.c  el2go_csr.h  el2go_csr_tlv_parser.c  el2go_csr_tlv_parser.h
ex/src/apps/psa_examples/el2go_csr/app/inc/: el2go_csr.h  el2go_csr_tlv_parser.h
ex/src/apps/psa_examples/el2go_csr/app/src/: el2go_csr.c  el2go_csr_tlv_parser.c
ex/src/apps/psa_examples/el2go_csr/common/inc/: byte_utils.h  csr_util.h  integrity_verifier.h
ex/src/apps/psa_examples/el2go_csr/common/src/: csr_util.c  integrity_verifier.c
ex/src/apps/psa_examples/el2go_csr/driver/: el2go_csr_flash_memory.c  el2go_csr_psa_key.c
ex/src/apps/psa_examples/el2go_csr/osal/baremetal/inc/: el2go_csr_osal_types.h
ex/src/apps/psa_examples/el2go_csr/osal/baremetal/src/: el2go_csr_platform.c
ex/src/apps/psa_examples/el2go_csr/osal/inc/: el2go_csr_platform.h
ex/src/apps/psa_examples/el2go_csr/osal/zephyr/inc/: el2go_csr_osal_types.h
ex/src/apps/psa_examples/el2go_csr/osal/zephyr/src/: el2go_csr_platform.c
ex/src/apps/psa_examples/el2go_csr/pal/: el2go_csr_console.h  el2go_csr_memory.h  el2go_csr_psa_key.h
ex/src/apps/psa_examples/el2go_csr/pal/boards/frdmmcxe31b/: el2go_csr_flash_memory.c  el2go_csr_psa_key.c
ex/src/apps/psa_examples/el2go_csr/pal/boards/mcxe31b/: el2go_csr_psa_key.c
ex/src/apps/psa_examples/el2go_csr/pal/inc/: el2go_csr_console.h  el2go_csr_memory.h  el2go_csr_psa_key.h
ex/src/apps/psa_examples/el2go_csr/port/: el2go_csr_mbedtls_user_config.h
ex/src/apps/psa_examples/el2go_import_blob/: CMakeLists.txt  el2go_import_blob.c  el2go_import_blob.h  el2go_psa_import.c  el2go_psa_import.h
ex/src/network/: iot_agent_network_lpc_mwm.c  iot_agent_network_lwip.c  iot_agent_network_lwip_wifi.c  iot_agent_network_zephyr_wifi.c
ex/src/osal/: iot_agent_osal_freertos.c  iot_agent_osal_zephyr.c
ex/src/osal/freertos/: iot_agent_osal_freertos.c
ex/src/osal/linux/: iot_agent_osal_linux.c
ex/src/osal/zephyr/: iot_agent_osal_zephyr.c
ex/src/utils/: iot_agent_claimcode_encrypt.c  iot_agent_claimcode_encrypt_els.c  iot_agent_claimcode_import.c  iot_agent_claimcode_inject.c  iot_agent_mqtt_freertos.c  iot_agent_mqtt_paho.c  iot_agent_mqtt_zephyr.c  iot_agent_rtp_client.c  serial_mwm_server.c
ex/src/utils/mbedtls_psa/: iot_agent_psa_sign_test.c  psa_crypto_wrapper.c  psa_init_utils.c
ext/: dirent_win32.h
inc/: nxp_iot_agent.h  nxp_iot_agent_common.h  nxp_iot_agent_config.h  nxp_iot_agent_datastore_fs.h  nxp_iot_agent_endpoint.h  nxp_iot_agent_keystore.h  nxp_iot_agent_log.h  nxp_iot_agent_macros.h  nxp_iot_agent_service.h  nxp_iot_agent_time.h  nxp_iot_agent_utils.h  nxp_iot_agent_ver.h
net_crypto/: network.h
port/: el2go_lite_mbedtls_psa_user_config.h  el2go_mbedtls3x_config.h  el2go_mbedtls_user_config.h  el2go_mbedtls_user_config_bare_metal.h  el2go_x86_mbedtls_psa_user_config.h
src/: nxp_iot_agent.c  nxp_iot_agent_datastore_fs.c  nxp_iot_agent_datastore_plain.c  nxp_iot_agent_keystore_psa.c  nxp_iot_agent_keystore_sss_se05x.c  nxp_iot_agent_service.c  nxp_iot_agent_session.c  nxp_iot_agent_time.c  nxp_iot_agent_utils.c  nxp_iot_agent_utils_internal.h  nxp_iot_agent_utils_protobuf_socket.c
src/common/: CMakeLists.txt  nxp_iot_agent_dispatcher.c  nxp_iot_agent_utils_protobuf.c
tst/: CMakeLists.txt
tst/public_interface/: CMakeLists.txt  test_agent_dispatcher.c  test_agent_dispatcher.h  test_agent_service.c  test_agent_service.h  test_agent_time.c  test_agent_time.h  test_agent_utils.c  test_agent_utils.h  test_datastore.c  test_datastore.h  test_datastore_fs.c  test_datastore_fs.h  test_datastore_plain.c  test_datastore_plain.h  test_keystore.c  test_keystore.h  test_public_interface.c  test_public_interface.h
tst/src/: CMakeLists.txt  nxp_iot_agent_tst_fixture.c  nxp_iot_agent_tst_fixture_cp.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/samples/el2go_agent/: CMakeLists.txt  Kconfig  README.rst  frdm_rw612_rw612_ns.overlay  overlay-el2go-claimcode-mqtt-rw61x.conf  overlay-el2go-whitelisting-mqtt-rw61x.conf  overlay-el2go-whitelisting-rw61x.conf  prj.conf  sample.yaml
zephyr/samples/el2go_agent/inc/: mbedtls_user_config.h
zephyr/samples/el2go_claimcode_encryption/: CMakeLists.txt  Kconfig  README.rst  overlay.conf  prj.conf  sample.yaml
zephyr/samples/el2go_claimcode_encryption/pytest/: test_el2go_claimcode_encryption.py
zephyr/samples/el2go_import_blob/: CMakeLists.txt  Kconfig  README.rst  overlay-el2go-rw61x.conf  prj.conf  sample.yaml
zephyr/samples/el2go_mqtt_demo/: CMakeLists.txt  Kconfig  README.rst  overlay-el2go-rw61x.conf  prj.conf  rd_rw612_bga_rw612_ns.overlay  sample.yaml
zephyr/samples/el2go_mqtt_demo/inc/: mbedtls_user_config.h
zephyr/tests/el2go_blob_test/: CMakeLists.txt  Kconfig  README.rst  frdm_rw612_rw612_ns.overlay  prj.conf  rd_rw612_bga_rw612_ns.overlay  testcase.yaml
(+84 files in other folders)
